src/ca4/yapl/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package ca4.yapl.parser;

import ca4.yapl.exceptions.IllegalUseException;
import ca4.yapl.exceptions.ProcedureNameMismatchException;
import ca4.yapl.exceptions.ProgramNameMismatchException;
import ca4.yapl.exceptions.YAPLException;
import ca4.yapl.impl.Attrib;
import ca4.yapl.impl.ProcedureSymbol;
import ca4.yapl.impl.Symbol;
import ca4.yapl.impl.SymbolTable;
import ca4.yapl.interfaces.CompilerError;
import ca4.yapl.interfaces.IAttrib;
import ca4.yapl.interfaces.ISymbol;
import ca4.yapl.lib.*;
import java.io.FileInputStream;
import java.io.IOException;

public class Parser implements ParserConstants {
    private static SymbolTable symbolTable = new SymbolTable();
    private static Token tProgramName = null;
    private static boolean displayInfo = false;    // set to true for extra compiler information

    public static void main(String args[]) {
        try {
            String file;
            if (args == null || args.length < 1) {
                file = "testFiles/test14.yapl";
            } else {
                file = args[0];
            }

            Parser parser = new Parser(new FileInputStream(file));
            parser.Program();

            CompilerMessage.printOK(tProgramName.image);
        } catch (ParseException pe) {
            CompilerMessage.printError(pe, tProgramName.image);
        } catch (YAPLException ye) {
            CompilerMessage.printError(ye, tProgramName.image);
        } catch (IOException e) {
            System.err.println("something went wrong" + e);
        }
    }

    /** Output function for additional information */
    private static void info(String s) {
      if(displayInfo)
                System.out.println("> Compiler: " + s);
    }

    /** Output function for additional information */
    private static void info(String s, Token t) {
                info(s + " '"+t.image+"'");
    }

  static final public void RelOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      jj_consume_token(LT);
      break;
    case LEQ:
      jj_consume_token(LEQ);
      break;
    case GEQ:
      jj_consume_token(GEQ);
      break;
    case GT:
      jj_consume_token(GT);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EqualOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
      break;
    case NEQ:
      jj_consume_token(NEQ);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AddOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MulOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
      jj_consume_token(MULT);
      break;
    case DIV:
      jj_consume_token(DIV);
      break;
    case MOD:
      jj_consume_token(MOD);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Literal = "True" | "False" | number . */
  static final public Attrib Literal() throws ParseException, YAPLException {
        {info("Found: Literal");}
        Token tok;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      jj_consume_token(TRUE);
                                         info("Found: <TRUE>");
          {if (true) return new Attrib(Attrib.Constant, new BoolType(true));}
      break;
    case FALSE:
      jj_consume_token(FALSE);
                                         info("Found: <FALSE>");
          {if (true) return new Attrib(Attrib.Constant, new BoolType(false));}
      break;
    case NUMBER:
      tok = jj_consume_token(NUMBER);
                                 info("Found: <NUMBER>", tok);
          {if (true) return new Attrib(Attrib.Constant,new IntType(Integer.parseInt(tok.image)) );}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib Selector(IAttrib parent) throws ParseException, YAPLException {
    Token tIdent;
    Type type = parent.getType();
    IAttrib attr;
    IAttrib idx;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
      jj_consume_token(SQUARE_BRACKET_OPEN);
      idx = Expr();
      jj_consume_token(SQUARE_BRACKET_CLOSE);
            if (!(type instanceof ArrayType))
                {if (true) throw new YAPLException(CompilerError.SelectorNotArray);}
            type = ((ArrayType)type).subarray(1);

            if (!(idx.getType() instanceof IntType))
                {if (true) throw new YAPLException(CompilerError.BadArraySelector);}

            attr = new Attrib(type, parent.isConstant());
      break;
    case DOT:
      jj_consume_token(DOT);
      tIdent = jj_consume_token(IDENT);
            if (!(type instanceof RecordType))
                {if (true) throw new YAPLException(CompilerError.SymbolIllegalUse);}

            ISymbol sym = ((RecordType)type).getMember(tIdent.image);
            if (sym == null)
                {if (true) throw new YAPLException(CompilerError.IdentNotDecl);}
            type = sym.getType();
            attr = new Attrib(type, parent.isConstant());
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      attr = Selector(attr);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
        {if (true) return attr;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib ArrayLen() throws ParseException, YAPLException {
    Token tIdent;
    IAttrib arrayAttr;
    IAttrib resultAttr;
    jj_consume_token(HASH);
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);

            if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Parameter)
                {if (true) throw new IllegalUseException(s, tIdent);}

            arrayAttr = new Attrib(s);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      arrayAttr = Selector(arrayAttr);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
        if (!(arrayAttr.getType() instanceof ArrayType))
            {if (true) throw new YAPLException(CompilerError.ArrayLenNotArray);}

        resultAttr = new Attrib(new IntType(), true);
        {if (true) return resultAttr;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib PrimaryExpr() throws ParseException, YAPLException {
    Token tIdent;
    IAttrib resultAttr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case NUMBER:
      resultAttr = Literal();
      break;
    case OPEN_PARENTH:
      jj_consume_token(OPEN_PARENTH);
      resultAttr = Expr();
      jj_consume_token(CLOSE_PARENTH);
      break;
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_1(2)) {
        resultAttr = ProcedureCall();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          tIdent = jj_consume_token(IDENT);
                ISymbol s = symbolTable.lookup(tIdent);
                if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Constant && s.getKind() != ISymbol.Parameter)
                    {if (true) throw new IllegalUseException(s, tIdent);}
                resultAttr = new Attrib(s);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SQUARE_BRACKET_OPEN:
          case DOT:
            resultAttr = Selector(new Attrib(s));
            break;
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          break;
        case HASH:
          resultAttr = ArrayLen();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
        {if (true) return resultAttr;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib UnaryExpr() throws ParseException, YAPLException {
    IAttrib resultAttr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      AddOp();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    resultAttr = PrimaryExpr();
        if (!(resultAttr.getType() instanceof IntType))
            {if (true) throw new YAPLException(CompilerError.IllegalOp1Type);}

        {if (true) return resultAttr;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib MulExpr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    lvalue = UnaryExpr();
        if (!(lvalue.getType() instanceof IntType))
            {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
      case DIV:
      case MOD:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_1;
      }
      MulOp();
      rvalue = UnaryExpr();
            if (!(rvalue.getType() instanceof IntType))
                {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    }
        {if (true) return lvalue;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib AddExpr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    lvalue = MulExpr();
        if (!(lvalue.getType() instanceof IntType))
            {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_2;
      }
      AddOp();
      rvalue = MulExpr();
            if (!(rvalue.getType() instanceof IntType))
                {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    }
        {if (true) return lvalue;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib RelExpr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    lvalue = AddExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
    case LEQ:
    case GT:
    case GEQ:
      RelOp();
      rvalue = AddExpr();
            if (!(lvalue instanceof IntType && rvalue instanceof IntType))
                {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
        {if (true) return new Attrib(new BoolType(), true);}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib EqualExpr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    lvalue = RelExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case NEQ:
      EqualOp();
      rvalue = RelExpr();
            if (!lvalue.getType().isCompatible(rvalue.getType()))
                {if (true) throw new YAPLException(CompilerError.IllegalEqualOpType);}
            if (!(lvalue instanceof IntType || rvalue instanceof IntType || lvalue instanceof BoolType || rvalue instanceof BoolType))
                {if (true) throw new YAPLException(CompilerError.IllegalEqualOpType);}
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
        {if (true) return new Attrib(new BoolType(), true);}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib CondAndExpr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    lvalue = EqualExpr();
        if (!(lvalue instanceof BoolType))
            {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      jj_consume_token(AND);
      rvalue = EqualExpr();
            if (!(rvalue instanceof BoolType))
                {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
    }
        {if (true) return lvalue;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib CreationExpr() throws ParseException, YAPLException {
    Type type;
    ArrayType resultType;
    IAttrib dim;
    jj_consume_token(NEW);
    type = StaticType();
        resultType = new ArrayType(type);
        resultType.setDim(1);
    jj_consume_token(SQUARE_BRACKET_OPEN);
    dim = Expr();
    jj_consume_token(SQUARE_BRACKET_CLOSE);
        if (!(dim instanceof IntType))
            {if (true) throw new YAPLException(CompilerError.BadArraySelector);}
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
      jj_consume_token(SQUARE_BRACKET_OPEN);
      dim = Expr();
      jj_consume_token(SQUARE_BRACKET_CLOSE);
            resultType.setDim(2);

            if (!(dim instanceof IntType))
                {if (true) throw new YAPLException(CompilerError.BadArraySelector);}
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
        {if (true) return new Attrib(resultType, false);}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib Expr() throws ParseException, YAPLException {
    IAttrib lvalue, rvalue;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      lvalue = CondAndExpr();
            if (!(lvalue instanceof BoolType))
                {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_4;
        }
        jj_consume_token(OR);
        rvalue = CondAndExpr();
                if (!(rvalue instanceof BoolType))
                    {if (true) throw new YAPLException(CompilerError.IllegalOp2Type);}
      }
      break;
    case NEW:
      lvalue = CreationExpr();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return lvalue;}
    throw new Error("Missing return statement in function");
  }

  static final public int ArgumentList(ProcedureSymbol s) throws ParseException, YAPLException {
    int i = 0;
    int paramCount = s.getParametersCount();
    IAttrib arg;
    ISymbol param;
    arg = Expr();
        param = s.getParameter(i);
        if (i >= paramCount - 1 || !arg.getType().isCompatible(param.getType()))
            {if (true) throw new YAPLException(CompilerError.ArgNotApplicable);}
        if (arg.isConstant() && !(param.getType() instanceof IntType) && !(param.getType() instanceof BoolType) && !param.isReadonly())
            {if (true) throw new YAPLException(CompilerError.ReadonlyArg);}
        i++;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      arg = Expr();
            param = s.getParameter(i);
            if (i >= paramCount - 1 || !arg.getType().isCompatible(param.getType()))
                {if (true) throw new YAPLException(CompilerError.ArgNotApplicable);}
            i++;
    }
        if (i < paramCount)
            {if (true) throw new YAPLException(CompilerError.TooFewArgs);}

        {if (true) return i;}
    throw new Error("Missing return statement in function");
  }

  static final public IAttrib ProcedureCall() throws ParseException, YAPLException {
    Token tIdent;
    IAttrib resultAttr;
    int argCount = -1;
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (!(s instanceof ProcedureSymbol))
                {if (true) throw new IllegalUseException(s, tIdent);}
            resultAttr = new Attrib(s);
    jj_consume_token(OPEN_PARENTH);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      argCount = ArgumentList((ProcedureSymbol)s);
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(CLOSE_PARENTH);
        if (argCount == -1 && ((ProcedureSymbol)s).getParametersCount() > 0)
            {if (true) throw new YAPLException(CompilerError.TooFewArgs);}
        {if (true) return resultAttr;}
    throw new Error("Missing return statement in function");
  }

  static final public void Assignment() throws ParseException, YAPLException {
    Token tIdent;
    IAttrib lvalue, rvalue;
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Parameter)
                {if (true) throw new IllegalUseException(s, tIdent);}
            lvalue = new Attrib(s);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      lvalue = Selector(lvalue);
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(ASSIGN);
    rvalue = Expr();
        if (lvalue.isConstant())
            {if (true) throw new YAPLException(CompilerError.ReadonlyAssign);}
        if (!lvalue.getType().isCompatible(rvalue.getType()))
            {if (true) throw new YAPLException(CompilerError.TypeMismatchAssign);}

        if (rvalue.isConstant() && (rvalue.getType() instanceof ArrayType || rvalue.getType() instanceof RecordType))
            lvalue.setConstant(true);
  }

  static final public void IfStatement() throws ParseException, YAPLException {
    IAttrib attr;
    jj_consume_token(IF);
    attr = Expr();
        if (!(attr.getType() instanceof BoolType))
            {if (true) throw new YAPLException(CompilerError.CondNotBool);}
    jj_consume_token(THEN);
    StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      StatementList();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(ENDIF);
  }

  static final public void WhileStatement() throws ParseException, YAPLException {
    IAttrib attr;
    jj_consume_token(WHILE);
    attr = Expr();
        if (!(attr.getType() instanceof BoolType))
            {if (true) throw new YAPLException(CompilerError.CondNotBool);}
    jj_consume_token(DO);
    StatementList();
    jj_consume_token(ENDWHILE);
  }

  static final public void ReturnStatement() throws ParseException, YAPLException {
    IAttrib retAttr = new Attrib(new VoidType(), true);
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      retAttr = Expr();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
        ISymbol s = symbolTable.getNearestParentSymbol(ISymbol.Procedure);
        if (s == null)
            s = symbolTable.getNearestParentSymbol(ISymbol.Program);
